Controllers refactor