@@ -3,7 +3,6 @@ package sk.tany.rest.api.service;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import sk.tany.rest.api.domain.customer.Customer;
 import sk.tany.rest.api.domain.customer.CustomerRepository;
@@ -12,7 +11,6 @@ import sk.tany.rest.api.mapper.CustomerMapper;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -27,7 +25,7 @@ public class CustomerService {
     }
 
     public List<CustomerDto> findAll() {
-        return customerRepository.findAll().stream().map(customerMapper::toDto).collect(Collectors.toList());
+        return customerRepository.findAll().stream().map(customerMapper::toDto).toList();
     }
 
     public Page<CustomerDto> findAll(Pageable pageable) {
